# carbonstock-prediction

./: .gitattributes  Dockerfile  README.md  pyproject.toml  start.sh
api/: main.py
app/: engine.py  model.pkl  schema.py
demo/: streamlit_app.py
notebooks/: Modeling_with_Geospatial.ipynb
