[project]
name = "sda-model-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "pydantic-settings>=2.14.1",
    "numpy>=2.0",
    "scikit-learn>=1.6",
    "xgboost>=3.0",
]

[project.optional-dependencies]
dev = [
    "streamlit>=1.45",
    "ruff",
    "requests",
    "mypy",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "api"]
